@@ -73,6 +73,8 @@ public class OConsts {
     public static final String DEFAULT_GLOSSARY = "glossary";
     /** Project subfolder for legacy translation memories default name. */
     public static final String DEFAULT_TM = "tm";
+    /** Project subfolder for automatically applied translation memories within the tm folder. */
+    public static final String AUTO_TM = "auto";
     /** Project subfolder for dictionaries default name. */
     public static final String DEFAULT_DICT = "dictionary";
     /** Project subfolder for project's translation memory. */
